--- a/.github/workflows/ibm3.yaml
+++ b/.github/workflows/ibm3.yaml
@@ -3,8 +3,8 @@ name: IBM Cloud Auto Restart3
 on:
   push:
     branches: [ master ]
-  schedule:
-    - cron: '0 12 * * FRI'
+  ##schedule:
+    ##- cron: '0 12 * * FRI'
 
 jobs:
   ibm-cloud-restart:
